fix voor overflow bug

--- a/sass/modules/_carousel.scss
+++ b/sass/modules/_carousel.scss
@@ -7,6 +7,7 @@
         background-color: #fff;
 
         div {
+            background-color: #fff;
             text-align: center;
         }
 
